[package]
authors = ['Threefoldtech <https://github.com/threefoldtech>']
description = 'Substrate TF Grid DB pallet'
edition = '2018'
homepage = 'https://threefold.io'
license = 'Apache'
name = 'pallet-tfgrid'
repository = 'https://github.com/threefoldtech/tfchain_pallets'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
# Substrate packages
serde = { version = '1.0.100', default-features = false, features = ['derive'], optional = true }
hex = { version = "0.4", default-features = false }
lite-json = { version = "0.1.3", default-features = false }

frame-benchmarking =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false, optional = true }
pallet-balances =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-storage =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
pallet-timestamp =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
	'codec/std',
	'pallet-balances/std',
	'frame-support/std',
	'frame-system/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-storage/std',
    'pallet-timestamp/std',
	'lite-json/std',
	'sp-core/std',
	'sp-io/std',
	'lite-json/std',
	'serde'
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]