[package]
authors = ['Threefoldfoundation <https://github.com/threefoldfoundation>']
description = 'TFT Price fetching pallet'
edition = '2018'
homepage = 'threefold.io'
license = 'Apache 2.0'
name = 'pallet-tft-price'
repository = 'https://github.com/threefoldfoundation/tft-parity'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { version = "1.0.119", features = ["derive"], default-features = false }
log = { version = "0.4.14", default-features = false }
lite-json = { version = "0.1", default-features = false }
parking_lot = '0.11'

# Substrate packages

frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-keystore =  { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", optional = true }
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'lite-json/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-std/std',
	'sp-keystore',
	'serde/std',
	'log/std',
	'scale-info/std'
]