[package]
authors = ['Threefoldfoundation <https://github.com/threefoldfoundation>']
description = 'TFT Price fetching pallet'
edition = '2021'
homepage = 'threefold.io'
license = 'Apache 2.0'
name = 'pallet-tft-price'
repository = 'https://github.com/threefoldfoundation/tft-parity'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
serde = { version = "1.0.119", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
log = { version = "0.4.14", default-features = false }
lite-json = { version = "0.1", default-features = false }
parking_lot = '0.11'

# Substrate packages
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

substrate-fixed = { git = 'https://github.com/encointer/substrate-fixed.git', rev = "b33d186888c60f38adafcfc0ec3a21aab263aef1" }
frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-keystore =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", optional = true }
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-authorship =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-session =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

[dev-dependencies]
tfchain-support = { path = "../../support", default-features = false }
substrate-validator-set = { path = '../substrate-validator-set' }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'lite-json/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-core/std',
	'sp-std/std',
	'sp-keystore',
	'serde/std',
	'log/std',
	'scale-info/std',
	'pallet-authorship/std',
	'pallet-session/std'
]
try-runtime = [
    "frame-support/try-runtime",
]