[package]
name = "pallet-validator"
version = "1.0.0"
edition = "2018"

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
serde = { features = ['derive'], optional = true, version = '1.0.101'}

# Substrate dependencies
sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
pallet-membership =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[dev-dependencies]
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12", default-features = false }

[dependencies.substrate-validator-set]
default-features = false
path = "../substrate-validator-set"

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'serde',
    'frame-system/std',
    'substrate-validator-set/std',
    'pallet-membership/std',
    'sp-io/std'
]