[package]
name = "pallet-validator"
version = "1.0.0"
edition = "2018"

[dependencies]
# Substrate dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-membership =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-session =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

[dev-dependencies]
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

[dependencies.substrate-validator-set]
default-features = false
path = "../substrate-validator-set"

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'frame-system/std',
    'substrate-validator-set/std',
    'pallet-membership/std',
    'pallet-collective/std',
    'pallet-session/std',
    'sp-io/std',
	'scale-info/std'
]