[package]
name = "substrate-validator-set"
version = "3.0.0"
authors = ["gautamdhameja"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

serde = { features = ['derive'], optional = true, version = '1.0.101'}

sp-std =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-runtime =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-staking =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

frame-support =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-system =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
pallet-session =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-io =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

[dependencies.log]
default-features = false
version = '0.4.14'

[dev-dependencies]
sp-core =  { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-std/std',
    'sp-runtime/std',
    'frame-support/std',
    'sp-staking/std',
    'serde',
    'frame-system/std',
    'pallet-session/std',
    'sp-io/std',
    'scale-info/std',
    'log/std'
]
try-runtime = [
    "frame-support/try-runtime",
]