[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"

[dependencies]
# Substrate packages

balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
frame-support = { version = '2.0.0', default-features = false }
frame-system = { version = '2.0.0', default-features = false }
sp-core = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }
sp-std = { version = '2.0.0', default-features = false }
sp-storage = { version = '2.0.0', default-features = false }
pallet-timestamp = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
hex = { version = "0.4", default-features = false }
lite-json = { version = "0.1.3", default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.0', default-features = false }
sp-io = { version = '2.0.0', default-features = false }
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
	'balances/std',
	'frame-support/std',
	'frame-system/std',
	'codec/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-storage/std',
    'pallet-timestamp/std',
	'sp-io/std',
	'lite-json/std',
]